YelpCamp/v6/mongoose.md
# Mongoose 
* What Is Mongoose?
* Why are we using it?
* Interact with a mnogo Database using Mongoose

# Show Page

# Refactor Mongoose code v3
* Create a models directory 
* Use module.exports
* Require everything correctly!

# Add Seeds file 
* Add a seeds.js file
* Run the seeds file every time the server starts

# Add the Comment Model!
* make our error go away
* display comments on campground show page

# Comment New/Create
* Discuss nested routes
* Add the comment new and create routes
* Add the new comment form

# Style Show page
* Add sidebar to show page
* Display comments nicely

# Finish Styling show page
* Add public directory
* Add custom stylesheet

# Auth pt-1 Add User Model
* Install all packages needed for auth
* Define User Model

# Auth pt-2 Register
* Configure Passport
* Add register routes
* Add register template

# Auth pt 3- Login
* Add login routes
* Add login templates

# Auth pt-4 -Logout/Navbar
* Add logout routes
* Prevent user from adding a cooment if not signed adding
* Add links to navbar
* Show/hide auth links correctly

# Auth Pt-5 Show/hide Links
* Show/hide auth links in navbar correcly









