YelpCamp/v10/mongoose.md
# Mongoose 
* What Is Mongoose?
* Why are we using it?
* Interact with a mnogo Database using Mongoose

# Show Page

# Refactor Mongoose code v3
* Create a models directory 
* Use module.exports
* Require everything correctly!

# Add Seeds file 
* Add a seeds.js file
* Run the seeds file every time the server starts

# Add the Comment Model!
* make our error go away
* display comments on campground show page

# Comment New/Create
* Discuss nested routes
* Add the comment new and create routes
* Add the new comment form

# Style Show page
* Add sidebar to show page
* Display comments nicely

# Finish Styling show page
* Add public directory
* Add custom stylesheet

# Auth pt-1 Add User Model
* Install all packages needed for auth
* Define User Model

# Auth pt-2 Register
* Configure Passport
* Add register routes
* Add register template

# Auth pt 3- Login
* Add login routes
* Add login templates

# Auth pt-4 -Logout/Navbar
* Add logout routes
* Prevent user from adding a cooment if not signed adding
* Add links to navbar
* Show/hide auth links correctly

# Auth Pt-5 Show/hide Links
* Show/hide auth links in navbar correcly

# Version 7
# Refactor the routes
* Use Express router to reorganize all routes

# Version 8
# Users + Comments
* Associate users and comments
* Save author's name to a comment automatically

# version 9
# Users + Campgrounds
* Prevent an unauthorized user from creating a campground
* save username+id to newly created campground

# Version 10
# Editing Campgrounds
* Add method-override
* Add edit route for campgrounds
* Add Link to edit page
* Add update route 
* Fix $set problem

# Deleting Campgrounds
* Add destroy route
* Add delete button

# Authorization Part 1: Campgrounds
* User can only edit his/her campgrounds
* User can only delete his/her campgrounds
* Hide/show edit and delete buttons

# Editing Comments
* Add edit route for comments
* Add edit buttons
* Add Update button

Campground Edit Route:  /campgrounds/:id/edit
Comment Edit Route:  /campgrounds/:id/comments/:comment_id/edit

# Deleting comments
* Add destroy route
* Add Delete button

Campground Destroy Route: /campgrounds/:id
Comment Destroy Route: /campgrounds/:id/comments/:comment_id

# Authorization Part 2 : Comments
* User can only edit his/her comments
* User can only delete his/her commetns
* Hide/show edit and delete buttons
* Refactor Middleware



